syntax = "proto3";
package proto;

enum Period{
  PERIOD_CURRENT = 0;
  PERIOD_M1      = 1;
  PERIOD_M2      = 2;
  PERIOD_M3      = 3;
  PERIOD_M4      = 4;
  PERIOD_M5      = 5;
  PERIOD_M6      = 6;
  PERIOD_M10     = 7;
  PERIOD_M12     = 8;
  PERIOD_M15     = 9;
  PERIOD_M20     = 10;
  PERIOD_M30     = 11;
  PERIOD_H1      = 12;
  PERIOD_H2      = 13;
  PERIOD_H3      = 14;
  PERIOD_H4      = 15;
  PERIOD_H5      = 16;
  PERIOD_H6      = 17;
  PERIOD_H7      = 18;
  PERIOD_H8      = 19;
  PERIOD_H12     = 20;
  PERIOD_D1      = 21;
  PERIOD_W1      = 22;
  PERIOD_MN1     = 23;
};

enum Type{
  TIME     = 0;
  VOLUME   = 1;
  TRADE    = 2;
  BOOK     = 3;
};

enum Side{
  BUY  = 0;
  SELL = 1;
};

enum MarketDataType{
  SPOT    = 0;
  FUTURES = 1;
};

message Item {
  double amount = 1;
  double price = 2;
};

message Orderbook {
  string            symbol = 1;
  uint64            timestamp = 2;
  uint32            levels = 3;
  repeated Item     asks = 4;
  repeated Item     bids  = 5;
  MarketDataType    marketType = 6;
};

message Candle {
  string symbol = 1;
  Period period = 2;
  double open = 3;
  double high = 4;
  double low = 5;
  double close = 6;
  double volume = 7;
  Type   type = 8;
  MarketDataType marketType = 9;
};

message Trade {
  string symbol = 1;
  uint64 timestamp = 2;
  double price = 3;
  double size = 4;
  Side   side = 5;
  MarketDataType marketType = 6;
};

message Ticker {
  string symbol = 1;
  uint64 timestamp = 2;
  double price = 3;
  Side   side = 4;
  double best_bid = 5;
  double best_ask = 6;
  MarketDataType marketType = 7;
};
